--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header{
   
 }
 .top{
-  background-color:  rgba(200, 245, 233, 0.959);;
+  background-color:  rgba(200, 245, 233, 0.959);
   margin: 0;
   padding: 0;
 }
