--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body{
        margin: 0;
         padding: 0;
        box-sizing: border-box;
-  display: flex;
-  flex: 1fr;
+
 }
 
   
@@ -36,7 +35,28 @@ h1{
    font-family: "Sacramento", cursive;
 
 }
+@media screen and (max-width: 768px){
+.fl{ font-size:16px;
+    padding:0;}
+  .work {
+    width: 100%;
+    padding: 1rem 0;
+    text-align: center;
+  }
 
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  a {
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 1rem;
+  }
+
+}
+  
 .work{
   text-align: center;
   font-family: 'Times New Roman', Times, serif
